added grammair explanation to present subjunctive

--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -506,6 +506,26 @@ Quand on considère l’information comme réelle ou probable, le français util
 - Comme toutes les expressions de sentiment ou émotion qui concernent une action incertaine ou future, elle déclenche le subjonctif.">&#128712;</span>
                     </li>
 
+                    <li>
+                        <span>Il est bon que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Il est bon que" value="subjonctif"
+                                    required="required" />subjonctif
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Il est bon que" value="indicatif" />indicatif
+                            </label>
+                        </span>
+                        <span class="info-icon" title="« il est bon que » exprime :
+- un jugement subjectif,
+- une appréciation,
+- une évaluation personnelle,
+- quelque chose considéré comme souhaitable ou préférable.
+Tous les jugements de valeur → subjonctif obligatoire.">&#128712;</span>
+                    </li>
+
                 </ol>
             </section>
 
@@ -524,6 +544,8 @@ Quand on considère l’information comme réelle ou probable, le français util
                                 <input type="radio" name="Après que" value="indicatif" required="required" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="« Après que » introduit une action réelle, certaine, qui s’est produite avant une autre.
+Donc le verbe doit être à l’indicatif, car on parle d’un fait réel.">&#128712;</span>
                     </li>
 
                     <li>
@@ -538,6 +560,12 @@ Quand on considère l’information comme réelle ou probable, le français util
                                 <input type="radio" name="Pourvu que" value="indicatif" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="« Pourvu que » exprime :
+- un souhait
+- un espoir
+- un vœu
+- parfois une condition favorable
+→ Toutes ces idées relèvent du possible, du souhaité, pas du certifié, donc subjonctif obligatoire.">&#128712;</span>
                     </li>
 
                     <li>
@@ -585,6 +613,8 @@ Quand on considère l’information comme réelle ou probable, le français util
                                 <input type="radio" name="Puisque" value="indicatif" required="required" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="- « Puisque » exprime une cause certaine, connue, évidente.
+- Le locuteur considère la cause comme un fait réel, donc → INDICATIF obligatoire.">&#128712;</span>
                     </li>
 
                     <li>
@@ -616,6 +646,8 @@ Elle signifie :
                                 <input type="radio" name="Jusqu’à ce que" value="indicatif" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="« Jusqu’à ce que » exprime une limite temporelle future ou incertaine, qui n’est pas encore réalisée.
+→ Tout événement non encore accompli déclenche le subjonctif.">&#128712;</span>
                     </li>
 
                     <li>
@@ -737,6 +769,8 @@ toujours future par rapport à la principale → subjonctif obligatoire.">&#1287
                                 <input type="radio" name="Parce que" value="indicatif" required="required" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon" title="« Parce que » introduit une cause réelle, un fait certain.
+Il n’exprime ni doute, ni sentiment, ni volonté → donc jamais de subjonctif.">&#128712;</span>
                     </li>
 
                     <li>
@@ -797,6 +831,8 @@ Elle est synonyme de : pour que">&#128712;</span>
                                 <input type="radio" name="Depuis que" value="indicatif" required="required" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon"
+                            title="Suivi de l’indicatif, car il indique le début d’une action réelle dans le passé qui continue ou qui a continué jusqu’au présent.">&#128712;</span>
                     </li>
 
                     <li>
@@ -811,6 +847,9 @@ Elle est synonyme de : pour que">&#128712;</span>
                                 <input type="radio" name="À moins que" value="indicatif" />indicatif
                             </label>
                         </span>
+                        <span class="info-icon"
+                            title="- Cette expression exprime une condition négative : « sauf si ».
+- Comme toutes les conjonctions qui introduisent une condition incertaine, elle déclenche le subjonctif.">&#128712;</span>
                     </li>
                 </ol>
             </section>
