added more phrases to present subjunctive

--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -474,6 +474,22 @@ Quand on considère l’information comme réelle ou probable, le français util
                     </li>
 
                     <li>
+                        <span>Je ne crois pas que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Je ne crois pas que" value="subjonctif"
+                                    required="required" />subjonctif
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Je ne crois pas que" value="indicatif" />indicatif
+                            </label>
+                        </span>
+                        <span class="info-icon" title="Même si, logiquement, « je ne crois pas » pourrait être une opinion négative, 
+ grammaticalement c’est considéré comme une incertitude, donc subjonctif.">&#128712;</span>
+                    </li>
+
+                    <li>
                         <span>Je pense que</span>
                         <span>
                             <label>
@@ -487,6 +503,22 @@ Quand on considère l’information comme réelle ou probable, le français util
                         </span>
                         <span class="info-icon" title="« Je pense que » exprime une opinion considérée comme probable, rationnelle, raisonnable.
 - L’indicatif est le mode de la réalité, du probable, du certain.">&#128712;</span>
+                    </li>
+
+                    <li>
+                        <span>Je ne pense pas que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Je ne pense pas que" value="subjonctif"
+                                    required="required" />subjonctif
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Je ne pense pas que" value="indicatif" />indicatif
+                            </label>
+                        </span>
+                        <span class="info-icon" title="Quand on dit « Je ne pense pas que…», on exprime un doute, une incertitude, 
+ou le fait que l’on ne considère pas la proposition comme vraie → subjonctif obligatoire.">&#128712;</span>
                     </li>
 
                     <li>
