added 'je veux que' example

--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -558,6 +558,27 @@ ou le fait que l’on ne considère pas la proposition comme vraie → subjoncti
 Tous les jugements de valeur → subjonctif obligatoire.">&#128712;</span>
                     </li>
 
+                    <li>
+                        <span>Je veux que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Je veux que" value="subjonctif"
+                                    required="required" />subjonctif
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Je veux que" value="indicatif" />indicatif
+                            </label>
+                        </span>
+                        <span class="info-icon" title="« Je veux que » exprime :
+- une volonté personnelle forte,
+- une intention,
+- une demande impérative,
+- un ordre indirect.
+Toutes les expressions de volonté, désir, insistance, ordre déclenchent automatiquement le subjonctif, 
+car elles ne décrivent pas un fait certain mais une action souhaitée (donc pas encore réalisée).">&#128712;</span>
+                    </li>
+
                 </ol>
             </section>
 
