--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -350,23 +350,6 @@ Or, en français, toute action non réalisée, souhaitée, attendue → subjonct
                     </li>
 
                     <li>
-                        <span>Il me semble que</span>
-                        <span>
-                            <label>
-                                <input type="radio" name="Il me semble que" value="subjonctif" />subjonctif
-                            </label>
-
-                            <label>
-                                <input type="radio" name="Il me semble que" value="indicatif"
-                                    required="required" />indicatif
-                            </label>
-                        </span>
-                        <span class="info-icon"
-                            title="opinion personnelle → INDICATIF.
-Quand le locuteur exprime sa perception, son jugement personnel, le français utilise l’indicatif, car il s’agit d’une appréciation subjective mais assumée.">&#128712;</span>
-                    </li>
-
-                    <li>
                         <span>Tu es persuadé que</span>
                         <span>
                             <label>
@@ -577,6 +560,38 @@ Tous les jugements de valeur → subjonctif obligatoire.">&#128712;</span>
 - un ordre indirect.
 Toutes les expressions de volonté, désir, insistance, ordre déclenchent automatiquement le subjonctif, 
 car elles ne décrivent pas un fait certain mais une action souhaitée (donc pas encore réalisée).">&#128712;</span>
+                    </li>
+
+                    <li>
+                        <span>Je me souviens que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Je me souviens que" value="subjonctif" />subjonctif
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Je me souviens que" value="indicatif"
+                                    required="required" />indicatif
+                            </label>
+                        </span>
+                        <span class="info-icon" title="« Je me souviens que » exprime un fait réel, une mémoire certaine, pas un jugement, pas un souhait, 
+pas une émotion incertaine. Donc on utilise l’indicatif, qui est le mode du réel.">&#128712;</span>
+                    </li>
+
+                    <li>
+                        <span>Je ne me souviens pas que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Je ne me souviens pas que" value="subjonctif"
+                                    required="required" />subjonctif
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Je ne me souviens pas que" value="indicatif" />indicatif
+                            </label>
+                        </span>
+                        <span class="info-icon" title="La négation introduit une incertitude, un doute sur la réalité du fait.
+→ Dès qu’il y a doute, incertitude, absence de certitude, on passe au subjonctif.">&#128712;</span>
                     </li>
 
                 </ol>
