added exercises from ChatGPT for present subjunctive

--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -177,6 +177,264 @@
                 </ol>
             </section>
 
+            <section class="span-third three-radio-buttons">
+                <h4>Classsez les débuts de phrases.</h4>
+
+                <ol>
+                    <li>
+                        <span>Il serait plus sage que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Il serait plus sage que" value="subjonctif" />Obligation
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Il serait plus sage que" value="indicatif"
+                                    required="required" />Souhaite
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Il serait plus sage que" value="indicatif" />Sentiment
+                            </label>
+                        </span>
+                    </li>
+
+                    <li>
+                        <span>Ils sont ravis que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Ils sont ravis que" value="subjonctif" />Obligation
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Ils sont ravis que" value="indicatif" />Souhaite
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Ils sont ravis que" value="indicatif"
+                                    required="required" />Sentiment
+                            </label>
+                        </span>
+                    </li>
+
+                    <li>
+                        <span>Il est souhaitable que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Il est souhaitable que" value="subjonctif" />Obligation
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Il est souhaitable que" value="indicatif"
+                                    required="required" />Souhaite
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Il est souhaitable que" value="indicatif" />Sentiment
+                            </label>
+                        </span>
+                    </li>
+
+                    <li>
+                        <span>On serait tristes que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="On serait tristes que" value="subjonctif" />Obligation
+                            </label>
+
+                            <label>
+                                <input type="radio" name="On serait tristes que" value="indicatif" />Souhaite
+                            </label>
+
+                            <label>
+                                <input type="radio" name="On serait tristes que" value="indicatif"
+                                    required="required" />Sentiment
+                            </label>
+                        </span>
+                    </li>
+
+                    <li>
+                        <span>Tu imposes que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Tu imposes que" value="subjonctif"
+                                    required="required" />Obligation
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Tu imposes que" value="indicatif" />Souhaite
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Tu imposes que" value="indicatif" />Sentiment
+                            </label>
+                        </span>
+                    </li>
+
+                    <li>
+                        <span>On propose que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="On propose que" value="subjonctif" />Obligation
+                            </label>
+
+                            <label>
+                                <input type="radio" name="On propose que" value="indicatif"
+                                    required="required" />Souhaite
+                            </label>
+
+                            <label>
+                                <input type="radio" name="On propose que" value="indicatif" />Sentiment
+                            </label>
+                        </span>
+                    </li>
+
+                    <li>
+                        <span>Je rêve que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Je rêve que" value="subjonctif" />Obligation
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Je rêve que" value="indicatif" />Souhaite
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Je rêve que" value="indicatif" required="required" />Sentiment
+                            </label>
+                        </span>
+                    </li>
+
+                    <li>
+                        <span>Nous exigeons que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Nous exigeons que" value="subjonctif"
+                                    required="required" />Obligation
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Nous exigeons que" value="indicatif" />Souhaite
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Nous exigeons que" value="indicatif" />Sentiment
+                            </label>
+                        </span>
+                    </li>
+
+                    <li>
+                        <span>Il est capital que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Il est capital que" value="subjonctif"
+                                    required="required" />Obligation
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Il est capital que" value="indicatif" />Souhaite
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Il est capital que" value="indicatif" />Sentiment
+                            </label>
+                        </span>
+                    </li>
+
+                    <li>
+                        <span>Je voudrais que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Je voudrais que" value="subjonctif" />Obligation
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Je voudrais que" value="indicatif"
+                                    required="required" />Souhaite
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Je voudrais que" value="indicatif" />Sentiment
+                            </label>
+                        </span>
+                    </li>
+
+                    <li>
+                        <span>Tu recommandes que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Tu recommandes que" value="subjonctif" />Obligation
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Tu recommandes que" value="indicatif"
+                                    required="required" />Souhaite
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Tu recommandes que" value="indicatif" />Sentiment
+                            </label>
+                        </span>
+                    </li>
+
+                    <li>
+                        <span>Vous détestez que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Vous détestez que" value="subjonctif" />Obligation
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Vous détestez que" value="indicatif" />Souhaite
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Vous détestez que" value="indicatif"
+                                    required="required" />Sentiment
+                            </label>
+                        </span>
+                    </li>
+
+                    <li>
+                        <span>Elles doutent que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Elles doutent que" value="subjonctif" />Obligation
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Elles doutent que" value="indicatif" />Souhaite
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Elles doutent que" value="indicatif"
+                                    required="required" />Sentiment
+                            </label>
+                        </span>
+                    </li>
+
+                    <li>
+                        <span>On craint que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="On craint que" value="subjonctif" />Obligation
+                            </label>
+
+                            <label>
+                                <input type="radio" name="On craint que" value="indicatif" />Souhaite
+                            </label>
+
+                            <label>
+                                <input type="radio" name="On craint que" value="indicatif"
+                                    required="required" />Sentiment
+                            </label>
+                        </span>
+                    </li>
+
+                </ol>
+            </section>
+
             <section class="span-third">
                 <h4>Faut-il complétez ces verbes avec un autre verbe au subjonctif ou à l’indicatif ?</h4>
 
@@ -918,6 +1176,128 @@ Elle est synonyme de : pour que">&#128712;</span>
                         <span class="info-icon"
                             title="- Cette expression exprime une condition négative : « sauf si ».
 - Comme toutes les conjonctions qui introduisent une condition incertaine, elle déclenche le subjonctif.">&#128712;</span>
+                    </li>
+                </ol>
+            </section>
+
+            <section>
+                <h4> Conjuguez les verbes au subjonctif présent ou indicatif.</h4>
+
+                <ol>
+                    <li>
+                        Après que tu (<b title="fais">faire</b>)
+                        <input type="text" pattern="fais">
+                        ton travail, tu peux te reposer.
+                    </li>
+
+                    <li>
+                        Nous réussirons, pourvu que tout (<b title="aille">aller</b>)
+                        <input type="text" pattern="aille">
+                        bien.
+                    </li>
+
+                    <li>
+                        En attendant qu’elle (<b title="finisse">finir</b>)
+                        <input type="text" pattern="finisse">
+                        son travail, je lis un livre.
+                    </li>
+
+                    <li>
+                        Lorsque je (<b title="suis">être</b>)
+                        <input type="text" pattern="suis">
+                        fatigué, je m’endors rapidement.
+                    </li>
+
+                    <li>
+                        Puisque tu (<b title="es">être</b>)
+                        <input type="text" pattern="es">
+                        là, aide-moi.
+                    </li>
+
+                    <li>
+                        Bien que tu (<b title="saches">savoir</b>)
+                        <input type="text" pattern="saches">
+                        la vérité, tu ne dis rien.
+                    </li>
+
+                    <li>
+                        Continue jusqu’à ce que tu (<b title="comprennes">comprendre</b>)
+                        <input type="text" pattern="comprennes">.
+                    </li>
+
+                    <li>
+                        Pendant que nous (<b title="attendons">attendre</b>)
+                        <input type="text" pattern="attendons">
+                        , ils préparent la salle.
+                    </li>
+
+                    <li>
+                        Aussitôt que je (<b title="peux">pouvoir</b>)
+                        <input type="text" pattern="peux">
+                        , je te réponds.
+                    </li>
+
+                    <li>
+                        Malgré le fait qu’elle (<b title="soit">être</b>)
+                        <input type="text" pattern="soit">
+                        en retard, la réunion a commencé.
+                    </li>
+
+                    <li>
+                        Nous commencerons le repas dès que tout le monde (<b title="est">être</b>)
+                        <input type="text" pattern="est">
+                        là.
+                    </li>
+
+                    <li>
+                        Comme il (<b title="fait">faire</b>)
+                        <input type="text" pattern="fait">
+                        beau, nous sortirons.
+                    </li>
+
+                    <li>
+                        Ils ont terminé le projet sans que nous le (<b title="sachions">savoir</b>)
+                        <input type="text" pattern="sachions">.
+                    </li>
+
+                    <li>
+                        Pars avant que je (<b title="revienne">revenir</b>)
+                        <input type="text" pattern="revienne">.
+                    </li>
+
+                    <li>
+                        Elle sourit parce qu’elle (<b title="est">être</b>)
+                        <input type="text" pattern="est">
+                        contente.
+                    </li>
+
+                    <li>
+                        Je t’explique afin que tu (<b title="comprennes">comprendre</b>)
+                        <input type="text" pattern="comprennes">
+                        mieux.
+                    </li>
+
+                    <li>
+                        Peut-être que tu (<b title="as">avoir</b>)
+                        <input type="text" pattern="as">
+                        raison.
+                    </li>
+
+                    <li>
+                        Je te prête mon livre pour que tu (<b title="puisses">pouvoir</b>)
+                        <input type="text" pattern="puisses">
+                        le lire.
+                    </li>
+
+                    <li>
+                        Depuis que nous (<b title="sommes">être</b>)
+                        <input type="text" pattern="sommes">
+                        amis, je me sens plus heureux.
+                    </li>
+
+                    <li>
+                        Nous partirons à moins qu’il (<b title="pleuve">pleuvoir</b>)
+                        <input type="text" pattern="pleuve">.
                     </li>
                 </ol>
             </section>
