added more examples to present subjunctive

--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -432,6 +432,24 @@
                         </span>
                     </li>
 
+                    <li>
+                        <span>Il est nécessaire que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Il est nécessaire que" value="subjonctif"
+                                    required="required" />Obligation
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Il est nécessaire que" value="indicatif" />Souhaite
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Il est nécessaire que" value="indicatif" />Sentiment
+                            </label>
+                        </span>
+                    </li>
+
                 </ol>
             </section>
 
@@ -850,6 +868,90 @@ pas une émotion incertaine. Donc on utilise l’indicatif, qui est le mode du r
                         </span>
                         <span class="info-icon" title="La négation introduit une incertitude, un doute sur la réalité du fait.
 → Dès qu’il y a doute, incertitude, absence de certitude, on passe au subjonctif.">&#128712;</span>
+                    </li>
+
+                    <li>
+                        <span>Il suffit que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Il suffit que" value="subjonctif"
+                                    required="required" />subjonctif
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Il suffit que" value="indicatif" />indicatif
+                            </label>
+                        </span>
+                        <span class="info-icon" title="On met le subjonctif après “il suffit que” parce qu’on exprime une condition possible, 
+non encore réalisée, et non un fait réel.">&#128712;</span>
+                    </li>
+
+                    <li>
+                        <span>Il est possible que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Il est possible que" value="subjonctif"
+                                    required="required" />subjonctif
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Il est possible que" value="indicatif" />indicatif
+                            </label>
+                        </span>
+                        <span class="info-icon" title="« Il est possible que » se construit avec le subjonctif parce que cette tournure exprime :
+- une possibilité,
+- une incertitude,
+- une hypothèse non confirmée.">&#128712;</span>
+                    </li>
+
+                    <li>
+                        <span>Il n’est pas possible que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Il n’est pas possible que" value="subjonctif"
+                                    required="required" />subjonctif
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Il n’est pas possible que" value="indicatif" />indicatif
+                            </label>
+                        </span>
+                        <span class="info-icon" title="« Il n’est pas possible que » se construit toujours avec le subjonctif parce que cette tournure exprime :
+- d’impossibilité,
+- de jugement,
+- et d’absence de fait établi.">&#128712;</span>
+                    </li>
+
+                    <li>
+                        <span>Il est probable que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Il est probable que" value="subjonctif" />subjonctif
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Il est probable que" value="indicatif"
+                                    required="required" />indicatif
+                            </label>
+                        </span>
+                        <span class="info-icon" title="En français standard, « il est probable que » se construit avec l’indicatif.
+Parce que probable exprime une forte vraisemblance, proche d’un fait tenu pour réel par le locuteur.">&#128712;</span>
+                    </li>
+
+                    <li>
+                        <span>Il est important que</span>
+                        <span>
+                            <label>
+                                <input type="radio" name="Il est important que" value="subjonctif"
+                                    required="required" />subjonctif
+                            </label>
+
+                            <label>
+                                <input type="radio" name="Il est important que" value="indicatif" />indicatif
+                            </label>
+                        </span>
+                        <span class="info-icon" title="Ce n’est pas un fait objectif, mais un jugement de valeur sur ce qui compte ou non. 
+Donc : subjonctif.">&#128712;</span>
                     </li>
 
                 </ol>
