added time prepositions exercise

--- a/french/index.html
+++ b/french/index.html
@@ -19,7 +19,7 @@
 
   <script type="module">
     "use strict";
-    
+
     import { Resolver } from './js/Resolver.mjs';
 
     const aElements = document.getElementsByClassName('theory');
@@ -156,6 +156,16 @@
     <a class="theory">théorie</a>
     <a href="pages/exercise_concordance_future.html">exercice de texte</a>
   </div>
+
+  <hr />
+
+  <div class="card">
+    <span class="cefr">A2</span>
+    <header>Le temps en grammaire</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_time_prepositions.html">exercice de texte</a>
+  </div>
+
   <hr />
 
   <h3>
