--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -29,8 +29,8 @@
                         <th></th>
                         <th colspan="4">A1</th>
                         <th colspan="6">A2</th>
-                        <th colspan="7">B1</th>
-                        <th colspan="4">B2</th>
+                        <th colspan="6">B1</th>
+                        <th colspan="5">B2</th>
                         <th colspan="4"></th>
                     </tr>
                     <tr>
@@ -48,10 +48,10 @@
                         <th colspan="2">plus-que-parfait</th>
                         <th colspan="2">conditionnel présent</th>
                         <th colspan="2">subjonctif présent</th>
-                        <th colspan="1">passif</th>
 
                         <!-- B2 -->
                         <th colspan="2">conditionnel passé</th>
+                        <th colspan="1">passif</th>
                         <th colspan="2">futur antérieur</th>
 
                         <th colspan="4">concordance des temps</th>
@@ -73,11 +73,11 @@
 
                         <!-- futur simple -->
                         <th><a href="conjugations.html?Le%20futur%20simple">liste</a></th>
-                        <th><a href="exercise_future.html">texte</a></th>
+                        <th><a href="exercise_future.html">texte</a><small>*</small></th>
 
                         <!-- impératif -->
                         <th><a href="conjugations.html?L%27impératif">liste</a></th>
-                        <th><a href="exercise_imperative.html">texte</a></th>
+                        <th><a href="exercise_imperative.html">texte</a><small>*</small></th>
 
                         <!-- B1 -->
                         <!-- plus-que-parfait -->
@@ -86,19 +86,19 @@
 
                         <!-- conditionnel présent -->
                         <th><a href="conjugations.html?Le%20conditionnel%20pr%C3%A9sent">liste</a></th>
-                        <th><a href="exercise_conditionalpresent.html">texte</a></th>
+                        <th><a href="exercise_conditionalpresent.html">texte</a><small>*</small></th>
 
                         <!-- subjonctif présent -->
                         <th><a href="conjugations.html?Le%20subjonctif%20pr%C3%A9sent">liste</a></th>
-                        <th><a href="exercise_presentsubjunctive.html">texte</a></th>
-
-                        <!-- passif -->
-                        <th><a href="exercise_passive.html">texte</a></th>
+                        <th><a href="exercise_presentsubjunctive.html">texte</a><small>*</small></th>
 
                         <!-- B2 -->
                         <!-- conditionnel passé -->
                         <th><a href="conjugations.html?Le%20conditionnel%20passé">liste</a></th>
                         <th><a href="exercise_conditionalperfect.html">texte</a></th>
+
+                        <!-- passif -->
+                        <th><a href="exercise_passive.html">texte</a><small>*</small></th>
 
                         <!-- futur antérieur -->
                         <th><a href="conjugations.html?Le%20futur%20antérieur">liste</a></th>
@@ -147,11 +147,11 @@
                             <td data-key="conjugations.html?Le%20subjonctif%20pr%C3%A9sent"></td>
                             <td data-key="exercise_presentsubjunctive.html"></td>
 
-                            <td data-key="exercise_passive.html"></td>
-
                             <!-- B2 -->
                             <td data-key="conjugations.html?Le%20conditionnel%20pass%C3%A9"></td>
                             <td data-key="exercise_conditionalperfect.html"></td>
+
+                            <td data-key="exercise_passive.html"></td>
 
                             <td data-key="conjugations.html?Le%20futur%20ant%C3%A9rieur"></td>
                             <td data-key="exercise_futureperfect.html"></td>
