fixed styles for concordance conditional

--- a/french/pages/exercise_concordance_conditional.html
+++ b/french/pages/exercise_concordance_conditional.html
@@ -39,7 +39,8 @@
                     <span class="whitespace"></span>Ce matin, je ne joue pas au tennis parce qu’il pleut.
                 </div>
                 <div>
-                    <span class="whitespace"></span>Mais, demain, s’il ne <b>pleut</b> pas, je <b>jouerai</b> au
+                    <span class="whitespace"></span>Mais, demain, s’il ne <b><i>pleut</i></b> pas, je
+                    <b><i>jouerai</i></b> au
                     tennis.
                 </div>
 
@@ -153,7 +154,8 @@
                     <span class="whitespace"></span>Elle ne va pas à ses cours parce qu’elle est malade.
                 </div>
                 <div>
-                    <span class="whitespace"></span>Si elle n’<b>était</b> pas malade, elle <b>irait</b> à ses
+                    <span class="whitespace"></span>Si elle n’<b><i>était</i></b> pas malade, elle <b><i>irait</i></b> à
+                    ses
                     cours.
                 </div>
 
@@ -265,8 +267,8 @@
                     <span class="whitespace"></span>Il n’a pas pris son vélo parce qu’il était en retard.
                 </div>
                 <div>
-                    <span class="whitespace"></span>S’il n’<b>avait</b> pas <b>été</b> en retard, il <b>aurait
-                        pris</b> son vélo.
+                    <span class="whitespace"></span>S’il n’<b><i>avait</i></b> pas
+                    <b><i>été</i></b> en retard, il <b><i>aurait pris</i></b> son vélo.
                 </div>
 
                 <ol class="input-sentence-width">
