added titles to sections on index page

--- a/french/index.html
+++ b/french/index.html
@@ -120,7 +120,11 @@
     <a class="wide" href="pages/conjugations.html?Conjugaisons%20mélangées">Conjugaisons mélangées</a>
   </h3>
 
+
+
   <hr />
+
+  <h2>La concordance des temps de verbes</h2>
 
   <div class="card">
     <span class="cefr">A2</span>
@@ -157,14 +161,20 @@
     <a href="pages/exercise_concordance_future.html">exercice de texte</a>
   </div>
 
+
+
   <hr />
+
+  <h2>Les prépositions</h2>
 
   <div class="card">
     <span class="cefr">A2</span>
-    <header>Le temps en grammaire</header>
+    <header>Les prépositions de temps</header>
     <a class="theory">théorie</a>
     <a href="pages/exercise_time_prepositions.html">exercice de texte</a>
   </div>
+
+
 
   <hr />
 
