--- a/french/pages/exercise_time_prepositions.html
+++ b/french/pages/exercise_time_prepositions.html
@@ -7,7 +7,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Le temps en grammaire</title>
+    <title>Les prépositions de temps</title>
 
     <link rel="icon" type="image/x-icon" href="../images/eiffel-tower.ico">
     <link rel="stylesheet" href="../styles.css">
@@ -22,7 +22,7 @@
 <body>
     <main spellcheck="false">
         <article class="text">
-            <h2>Le temps en grammaire</h2>
+            <h2>Les prépositions de temps</h2>
             <h3>Exercices de conjugaison</h3>
 
             <section>
